--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Mika Zimina (aka Drakolis)</title>
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
+  <link
+    rel="stylesheet"
+    href="https://docsify.catppuccin.com/mocha/green.css"
+  />
 </head>
 <body>
   <div id="app"></div>
   <script>
     window.$docsify = {
       repo: 'Drakolis/drakolis.github.io',
-      loadSidebar: true
+      // loadSidebar: true
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
