--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <title>Mika Zimina (aka Drakolis)</title>
   <link
     rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css"
+  />
+  <link
+    rel="stylesheet"
     href="https://docsify.catppuccin.com/mocha/green.css"
   />
 </head>
