--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <script>
     window.$docsify = {
       repo: 'Drakolis/drakolis.github.io',
-      // loadSidebar: true
+      name: 'Work with Mika Zimina',
+      hideSidebar: true,
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
