--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   />
   <link
     rel="stylesheet"
-    href="https://docsify.catppuccin.com/mocha/green.css"
+    href="https://docsify.catppuccin.com/mocha/teal.css"
   />
 </head>
 <body>
