--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   />
   <link
     rel="stylesheet"
-    href="https://docsify.catppuccin.com/mocha/teal.css"
+    href="https://docsify.catppuccin.com/mocha/mauve.css"
   />
 </head>
 <body>
